@@ -61,6 +61,17 @@ notify_has_selection_cb (GObject *object, GParamSpec *param_spec, gpointer user_
 }
 
 void
+buffer_modified_changed_cb (GtkTextBuffer *self, gpointer user_data)
+{
+	g_object_set (gtk_builder_get_object (mcus->builder, "mcus_save_action"),
+		      "sensitive", gtk_text_buffer_get_modified (self),
+		      NULL);
+	g_object_set (gtk_builder_get_object (mcus->builder, "mcus_save_as_action"),
+		      "sensitive", TRUE,
+		      NULL);
+}
+
+void
 mcus_main_window_init (void)
 {
 	GtkTextBuffer *text_buffer;
@@ -82,6 +93,10 @@ mcus_main_window_init (void)
 	g_signal_connect (text_buffer, "notify::can-undo", G_CALLBACK (notify_can_undo_cb), NULL);
 	g_signal_connect (text_buffer, "notify::can-redo", G_CALLBACK (notify_can_redo_cb), NULL);
 	g_signal_connect (text_buffer, "notify::has-selection", G_CALLBACK (notify_has_selection_cb), NULL);
+
+	/* Watch for modification of the code buffer */
+	g_signal_connect (text_buffer, "modified-changed", G_CALLBACK (buffer_modified_changed_cb), NULL);
+	gtk_text_buffer_set_modified (text_buffer, FALSE);
 }
 
 gboolean
@@ -314,4 +329,159 @@ mw_about_activate_cb (GtkAction *self, gpointer user_data)
 				NULL);
 
 	g_free (license);
+}
+
+void mw_save_activate_cb (GtkAction *self, gpointer user_data);
+void mw_save_as_activate_cb (GtkAction *self, gpointer user_data);
+
+/* Returns TRUE if changes were saved, or FALSE if the operation was cancelled */
+static gboolean
+ask_to_save_changes (void)
+{
+	GtkWidget *dialog;
+
+	dialog = gtk_message_dialog_new (GTK_WINDOW (mcus->main_window), GTK_DIALOG_MODAL, GTK_MESSAGE_QUESTION, GTK_BUTTONS_NONE,
+					 _("Save the changes to program before closing?"));
+	gtk_dialog_add_buttons (GTK_DIALOG (dialog),
+				_("Close without Saving"), GTK_RESPONSE_CLOSE,
+				"gtk-cancel", GTK_RESPONSE_CANCEL,
+				"gtk-save-as", GTK_RESPONSE_OK,
+				NULL);
+	gtk_message_dialog_format_secondary_text (GTK_MESSAGE_DIALOG (dialog), _("If you don't save, your changes will be permanently lost."));
+
+	switch (gtk_dialog_run (GTK_DIALOG (dialog))) {
+	case GTK_RESPONSE_CLOSE:
+		gtk_widget_destroy (dialog);
+		return TRUE;
+	case GTK_RESPONSE_CANCEL:
+		gtk_widget_destroy (dialog);
+		return FALSE;
+	default:
+		gtk_widget_destroy (dialog);
+		mw_save_activate_cb (NULL, NULL);
+		return TRUE;
+	}
+}
+
+void
+mw_new_activate_cb (GtkAction *self, gpointer user_data)
+{
+	GtkTextBuffer *text_buffer = GTK_TEXT_BUFFER (gtk_builder_get_object (mcus->builder, "mw_code_buffer"));
+
+	/* Ask to save old files */
+	if (gtk_text_buffer_get_modified (text_buffer) == FALSE ||
+	    ask_to_save_changes () == TRUE) {
+		gtk_text_buffer_set_text (text_buffer, "", -1);
+		gtk_text_buffer_set_modified (text_buffer, FALSE);
+	}
+}
+
+void
+mw_open_activate_cb (GtkAction *self, gpointer user_data)
+{
+	GIOChannel *channel;
+	GtkWidget *dialog;
+	gchar *file_contents = NULL;
+	GError *error = NULL;
+	GtkTextBuffer *text_buffer = GTK_TEXT_BUFFER (gtk_builder_get_object (mcus->builder, "mw_code_buffer"));
+
+	/* Ask to save old files */
+	if (gtk_text_buffer_get_modified (text_buffer) == FALSE ||
+	    ask_to_save_changes () == TRUE) {
+		/* Get a filename to open */
+		dialog = gtk_file_chooser_dialog_new (_("Open File"), GTK_WINDOW (mcus->main_window), GTK_FILE_CHOOSER_ACTION_OPEN,
+						      GTK_STOCK_CANCEL, GTK_RESPONSE_CANCEL,
+						      GTK_STOCK_OPEN, GTK_RESPONSE_OK,
+						      NULL);
+
+		if (gtk_dialog_run (GTK_DIALOG (dialog)) == GTK_RESPONSE_OK)
+		{
+			mcus->current_filename = gtk_file_chooser_get_filename (GTK_FILE_CHOOSER (dialog));
+			channel = g_io_channel_new_file (mcus->current_filename, "r", &error);
+			if (error != NULL)
+				goto file_error;
+
+			g_io_channel_read_to_end (channel, &file_contents, NULL, &error);
+			if (error != NULL)
+				goto file_error;
+
+			gtk_text_buffer_set_text (text_buffer, file_contents, -1);
+			gtk_text_buffer_set_modified (text_buffer, FALSE);
+			g_free (file_contents);
+
+			g_io_channel_shutdown (channel, FALSE, NULL);
+			g_io_channel_unref (channel);
+		}
+		gtk_widget_destroy (dialog);
+	}
+
+	return;
+
+file_error:
+	mcus_interface_error (error->message);
+	g_io_channel_unref (channel);
+	gtk_widget_destroy (dialog);
+	if (file_contents != NULL)
+		g_free (file_contents);
+}
+
+void
+mw_save_activate_cb (GtkAction *self, gpointer user_data)
+{
+	GtkTextIter start_iter, end_iter;
+	GtkTextBuffer *text_buffer;
+	GIOChannel *channel;
+	gchar *file_contents = NULL;
+	GError *error = NULL;
+
+	if (mcus->current_filename == NULL)
+		return mw_save_as_activate_cb (self, user_data);
+
+	channel = g_io_channel_new_file (mcus->current_filename, "w", &error);
+	if (error != NULL)
+		goto file_error;
+
+	text_buffer = GTK_TEXT_BUFFER (gtk_builder_get_object (mcus->builder, "mw_code_buffer"));
+
+	gtk_text_buffer_get_bounds (text_buffer, &start_iter, &end_iter);
+	file_contents = gtk_text_buffer_get_text (text_buffer, &start_iter, &end_iter, FALSE);
+
+	g_io_channel_write_chars (channel, file_contents, -1, NULL, &error);
+	if (error != NULL)
+		goto file_error;
+
+	gtk_text_buffer_set_modified (text_buffer, FALSE);
+	g_free (file_contents);
+
+	g_io_channel_shutdown (channel, TRUE, NULL);
+	g_io_channel_unref (channel);
+
+	return;
+
+file_error:
+	mcus_interface_error (error->message);
+	g_io_channel_unref (channel);
+	if (file_contents != NULL)
+		g_free (file_contents);
+}
+
+void
+mw_save_as_activate_cb (GtkAction *self, gpointer user_data)
+{
+	GtkWidget *dialog;
+
+	dialog = gtk_file_chooser_dialog_new (_("Save File"), GTK_WINDOW (mcus->main_window), GTK_FILE_CHOOSER_ACTION_SAVE,
+					      GTK_STOCK_CANCEL, GTK_RESPONSE_CANCEL,
+					      GTK_STOCK_SAVE, GTK_RESPONSE_OK,
+					      NULL);
+	gtk_file_chooser_set_do_overwrite_confirmation (GTK_FILE_CHOOSER (dialog), TRUE);
+	if (mcus->current_filename != NULL)
+		gtk_file_chooser_set_filename (GTK_FILE_CHOOSER (dialog), mcus->current_filename);
+
+	if (gtk_dialog_run (GTK_DIALOG (dialog)) == GTK_RESPONSE_OK) {
+		g_free (mcus->current_filename);
+		mcus->current_filename = gtk_file_chooser_get_filename (GTK_FILE_CHOOSER (dialog));
+		mw_save_activate_cb (self, user_data);
+	}
+	gtk_widget_destroy (dialog);
 }
